# donna2.0

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  backfill_embeddings.py  check_config.py  check_emails.py  cleanup_duplicates.py  cleanup_stale_calls.py  debug_ids.py  pyproject.toml  run_server.py  test_audio.raw  test_db_connection.py  test_elevenlabs_key.py  test_voice_pipeline.py  token.json
.claude/: settings.json
.claude/agents/: deepgram-integration.md  fireworks-integration.md  google-auth-integration.md  twilio-integration.md
.claude/commands/: commit.md  engineer.md  fix-error.md  full-ui-test.md  generate-tests.md
.kiro/specs/ai-receptionist/: design.md  requirements.md  tasks.md
admin-ui/: index.html  package-lock.json  package.json  tailwind.config.js
admin-ui/dist-electron/: main.js  preload.js
admin-ui/electron/: main.ts  preload.ts
admin-ui/src/: App.tsx  index.css  vite-env.d.ts
admin-ui/src/api/: client.ts  hooks.ts  index.ts
admin-ui/src/components/: CalendarAlerts.tsx  CallQueue.tsx  DecisionTimeline.tsx  LiveCallView.tsx  LiveTranscription.tsx  Sidebar.tsx  TopNav.tsx
admin-ui/src/types/: index.ts
admin-ui/src/views/: CallHistory.tsx  Contacts.tsx  Dashboard.tsx  Emails.tsx  Settings.tsx
src/receptionist/: __init__.py  calendar_service.py  call_manager.py  config.py  connection_manager.py  data_ingestion.py  database.py  google_auth.py  main.py  models.py  reasoning_engine.py  vector_search.py  voice_pipeline.py  webhook_handler.py
tests/: __init__.py  test_calendar_service.py  test_google_auth.py
